--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <button id="increase" onclick="increase()" type="button">Increase</button>
       </div>
       <div class="history-container"">
-        <p>History</p>
+        <p>history</p>
         <div class="history" id="history">
 
         </div>
       </div>
     </div>
 
-  <p class="dev">dev: encinares16</p>  
+  <p class="dev">dev:encinares16</p>  
   </main>
   <script src="app.js"></script>
 </body>
