--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="./javascript.svg">
   <title>Javascript Counter</title>
 </head>
 
@@ -20,13 +21,20 @@
       <div class="history-container"">
         <p>history</p>
         <div class="history" id="history">
-
         </div>
       </div>
     </div>
 
-  <p class="dev">dev:encinares16</p>  
+    <div id="typewrite">
+      <p class="p-dev">dev : <span id="justme">encinares16</span></p>
+    </div>
+  
+
   </main>
+
+  
+
+
   <script src="app.js"></script>
 </body>
 </html>
